[package]
name = "bevy_shuffle_bag"
version = "0.1.1"
edition = "2024"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
exclude = ["./cargo_expand/", "./assets/"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/bevy_shuffle_bag"
description = "A crate for shuffling collections in Bevy"
keywords = ["bevy", "collection", "shuffle", "bag"]
categories = ["game-development"]

[features]
default = ["bevy_assets"]
bevy_assets = ["bevy/bevy_asset"]

[dependencies]
rand = "0.8.5"
serde = { version = "1", features = ["derive"], optional = true }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[dependencies.bevy]
version = "0.15"
default-features = false

[dev-dependencies]
paste = "1.0.15"
bevy = { version = "0.15" }
